fixed group-wise training

--- a/InfoLoc.ipynb
+++ b/InfoLoc.ipynb
@@ -3201,7 +3201,8 @@
             "Memory sizes to evaluate: [3 4 5 6 7 8]\n",
             "Processing model: NNLM\n",
             "    Processing language: en\n",
-            "      Memory size: 3\n"
+            "      Memory size: 3\n",
+            "      Memory size: 4\n"
           ]
         }
       ],
@@ -3248,32 +3249,29 @@
         "            }\n",
         "\n",
         "            # initialize model\n",
-        "            if model_name == 'RNNLM':\n",
-        "                model = RNNLanguageModel(\n",
-        "                    vocab_size=tokenizer.vocab_size,\n",
-        "                    embedding_dim=32,\n",
-        "                    hidden_dim=64,\n",
-        "                    num_layers=2,\n",
-        "                    dropout_prob=0.5\n",
-        "                )\n",
-        "            elif model_name == 'NNLM':\n",
-        "                model = NNLM(\n",
-        "                    emb_size=32,\n",
-        "                    vocab_size=tokenizer.vocab_size,\n",
-        "                    hidden_size=64,\n",
-        "                    memory_size=memory_size,\n",
-        "                    pad_id=tokenizer.pad_id\n",
-        "                )\n",
-        "            model.to(device)\n",
+        "            for group_idx, group in enumerate(groups):\n",
+        "                if model_name == 'RNNLM':\n",
+        "                    model = RNNLanguageModel(\n",
+        "                        vocab_size=tokenizer.vocab_size,\n",
+        "                        embedding_dim=32,\n",
+        "                        hidden_dim=64,\n",
+        "                        num_layers=2,\n",
+        "                        dropout_prob=0.5\n",
+        "                    )\n",
+        "                elif model_name == 'NNLM':\n",
+        "                    model = NNLM(\n",
+        "                        emb_size=32,\n",
+        "                        vocab_size=tokenizer.vocab_size,\n",
+        "                        hidden_size=64,\n",
+        "                        memory_size=memory_size,\n",
+        "                        pad_id=tokenizer.pad_id\n",
+        "                    )\n",
+        "                model.to(device)\n",
         "\n",
-        "            # training\n",
-        "            surprisals_natural = train_and_evaluate(model, trainDataLoaders['natural'], test_loaders['natural'], num_epochs, learning_rate=0.001, device=device, type_desc=model_name)\n",
-        "            surprisals_complete_random = train_and_evaluate(model, trainDataLoaders['complete_random'], test_loaders['complete_random'], num_epochs, learning_rate=0.001, device=device, type_desc=model_name)\n",
-        "            surprisals_dep_preserved = train_and_evaluate(model, trainDataLoaders['dep_preserved'], test_loaders['dep_preserved'], num_epochs, learning_rate=0.001, device=device, type_desc=model_name)\n",
+        "                # training\n",
+        "                surprisals = train_and_evaluate(model, trainDataLoaders[group], test_loaders[group], num_epochs, learning_rate=0.001, device=device, type_desc=model_name)\n",
         "\n",
-        "            # store results\n",
-        "            for group_idx, (group_name, surprisals) in enumerate(zip(groups,\n",
-        "                                                                     [surprisals_natural, surprisals_complete_random, surprisals_dep_preserved])):\n",
+        "                # store results\n",
         "                average_surprisals[model_idx, group_idx, lang_idx, mem_idx] = np.mean(np.array(surprisals))\n",
         "                std_surprisals[model_idx, group_idx, lang_idx, mem_idx] = np.std(np.array(surprisals)) \n",
         "\n",
