--- a/InfoLoc.ipynb
+++ b/InfoLoc.ipynb
@@ -3196,6 +3196,13 @@
             "Memory sizes to evaluate: [3 4 5 6 7 8]\n",
             "Processing model: NNLM\n",
             "    Processing language: en\n",
+            "      Memory size: 3\n",
+            "      Memory size: 4\n",
+            "      Memory size: 5\n",
+            "      Memory size: 6\n",
+            "      Memory size: 7\n",
+            "      Memory size: 8\n",
+            "    Processing language: spanish\n",
             "      Memory size: 3\n"
           ]
         }
